--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="card-header bg-white">
             <h2 class="card-title mb-1">To Do</h2>
           </div>
-          <div class="card-body bg-light" ondrop="drop(event)" ondragover="allowDrop(event)">
+          <div class="card-body bg-light">
             
             <div id="todo-cards">
               <!-- insert cards here
@@ -120,8 +120,21 @@
           <div class="card-header bg-white">
             <h2 class="card-title mb-1">In Progress</h2>
           </div>
-          <div class="card-body bg-light" ondrop="drop(event)" ondragover="allowDrop(event)">
-            <div id="in-progress-cards"></div>
+          <div class="card-body bg-light">
+            <!-- <div id="in-progress-cards"> -->
+              <!-- insert cards here
+              <div class="card mb-2">  
+                <div>
+                  <div class="card-header">
+                    <h5>test</h5>
+                  </div>
+                  <p class="card-text">This is a test card</p>
+                  <p>03/21/2024</p>
+                  <button class="mb-3">Delete</button>
+                </div>
+              </div>
+              -->
+            <!-- </div> -->
           </div>
         </div>
         </div>
@@ -130,8 +143,21 @@
             <div class="card-header bg-white">
               <h2 class="card-title mb-1">Done</h2>
             </div>
-            <div class="card-body bg-light" ondrop="drop(event)" ondragover="allowDrop(event)">
-              <div id="done-cards"></div>
+            <div class="card-body bg-light">
+              <div id="done-cards">
+              <!-- insert cards here
+              <div class="card mb-2">  
+                <div>
+                  <div class="card-header">
+                    <h5>test</h5>
+                  </div>
+                  <p class="card-text">This is a test card</p>
+                  <p>03/21/2024</p>
+                  <button class="mb-3">Delete</button>
+                </div>
+              </div>
+              -->
+              </div>
           </div>
           </div>
       </div>
