--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="card-header bg-white">
             <h2 class="card-title mb-1">To Do</h2>
           </div>
-          <div class="card-body bg-light">
+          <div class="card-body bg-light" id="Fred">
             
             <div id="todo-cards">
               <!-- insert cards here
@@ -120,8 +120,8 @@
           <div class="card-header bg-white">
             <h2 class="card-title mb-1">In Progress</h2>
           </div>
-          <div class="card-body bg-light">
-            <!-- <div id="in-progress-cards"> -->
+          <div class="card-body bg-light" id="fred2">
+            <div id="in-progress-cards">
               <!-- insert cards here
               <div class="card mb-2">  
                 <div>
@@ -134,7 +134,7 @@
                 </div>
               </div>
               -->
-            <!-- </div> -->
+            </div>
           </div>
         </div>
         </div>
@@ -143,7 +143,7 @@
             <div class="card-header bg-white">
               <h2 class="card-title mb-1">Done</h2>
             </div>
-            <div class="card-body bg-light">
+            <div class="card-body bg-light" id="fred3">
               <div id="done-cards">
               <!-- insert cards here
               <div class="card mb-2">  
