checkpoint droppable for in progress working

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="card-header bg-white">
             <h2 class="card-title mb-1">To Do</h2>
           </div>
-          <div class="card-body bg-light" id="Fred">
+          <div class="card-body bg-light">
             
             <div id="todo-cards">
               <!-- insert cards here
@@ -120,7 +120,7 @@
           <div class="card-header bg-white">
             <h2 class="card-title mb-1">In Progress</h2>
           </div>
-          <div class="card-body bg-light" id="fred2">
+          <div class="card-body bg-light">
             <div id="in-progress-cards">
               <!-- insert cards here
               <div class="card mb-2">  
@@ -143,7 +143,7 @@
             <div class="card-header bg-white">
               <h2 class="card-title mb-1">Done</h2>
             </div>
-            <div class="card-body bg-light" id="fred3">
+            <div class="card-body bg-light">
               <div id="done-cards">
               <!-- insert cards here
               <div class="card mb-2">  
